manifests/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronoea
  namespace: default
  labels:
    app: pronoea
spec:
  selector:
    matchLabels:
      app: pronoea
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pronoea
    spec:
      serviceAccount: pronoea
      containers:
      - name: pronoea
        image: pronoea:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8081
          name: http
